--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
   <body>
     <section class="unplush">
       <div class="unplush_time">
-        <span class="unplush_time" id="clock"></span>
+        <span class="unplush_time" id="clock">09</span>
         <span class="unplush_time">:</span>
-        <span class="unplush_time" id="minute"></span>
-        <span class="pm" id="pm_am"></span>
+        <span class="unplush_time" id="minute">.</span>
+        <span class="pm" id="pm_am">.</span>
       </div>
       <div class="unplush_year">
-        <span id="week"></span>
-        <span id="monts"></span>
-        <span id="year"></span>
+        <span id="week">.</span>
+        <span id="monts">.</span>
+        <span id="year">.</span>
       </div>
     </section>
   </body>
