new product page tugadi bitirildi

--- a/newProduct.html
+++ b/newProduct.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./main.css" />
     <script defer src="./main.js"></script>
   </head>
-  <body>
+  <body style="height: 100vh; overflow: hidden">
     <header>
       <nav class="navbar">
         <div class="container">
@@ -18,25 +18,25 @@
             </div>
             <ul class="navbar_links">
               <li class="navbar_links-item">
-                <a href="!#" class="avtive">
+                <a href="#" class="active">
                   <img src="./icons/home.svg" alt="home img" />
                   Bosh sahifa
                 </a>
               </li>
               <li class="navbar_links-item">
-                <a href="!#">
+                <a href="#">
                   <img src="./icons/nav-2.svg" alt="home img" />
                   Buyurtmalar
                 </a>
               </li>
               <li class="navbar_links-item">
-                <a href="!#">
+                <a href="#">
                   <img src="./icons/clock.svg" alt="home img" />
                   Buyurtmalar tarixi
                 </a>
               </li>
               <li class="navbar_links-item">
-                <a href="!#">
+                <a href="#">
                   <img src="./icons/receipt.svg" alt="home img" />
                   Hisobot
                 </a>
@@ -50,5 +50,85 @@
         </div>
       </nav>
     </header>
+    <main class="main">
+      <section class="sidebar_left">
+        <div class="sidebar_left-item sidebar-active">
+          <img src="./icons/breakfastwhite.svg" alt="breakfast" />
+          <span>1 - Etaj</span>
+        </div>
+        <div class="sidebar_left-item">
+          <img src="./icons/breakfast.svg" alt="breakfast" />
+          <span>2 - Etaj</span>
+        </div>
+        <div class="sidebar_left-item">
+          <img src="./icons/breakfast.svg" alt="breakfast" />
+          <span>Podval</span>
+        </div>
+      </section>
+
+      <section class="main_outlet">
+        <div class="main_outlet_top">
+          <p class="main_outlet_top-text">
+            <span class="span">Bosh sahifa /</span>
+            <span>Buyurtmalar</span>
+          </p>
+        </div>
+        <div class="main_outlet_center">
+          <div class="main_outlet-search">
+            <img src="./icons/search.svg" alt="search" />
+            <input type="text" placeholder="Search" />
+          </div>
+          <div class="main_outlet-btn">
+            <a href="#" class="main_outlet_btn-active">Barchasi</a>
+            <a href="#">Bron qilingalnlar</a>
+            <a href="#">VIP Zallar</a>
+            <a href="#">Honalar</a>
+          </div>
+        </div>
+        <div class="main_outlet_bottom">
+          <div class="main__outlet_wrapper">
+            <div class="main__outlet_wrapper__card">
+              <div class="main__outlet_wrapper__card-header"></div>
+              <div class="main__outlet_wrapper__card-body">
+                <p>1-stol</p>
+              </div>
+              <div class="main__outlet_wrapper__card-header"></div>
+            </div>
+            <div class="main__outlet_wrapper__card">
+              <div class="main__outlet_wrapper__card-header"></div>
+              <div class="main__outlet_wrapper__card-body">
+                <p>1-stol</p>
+              </div>
+              <div class="main__outlet_wrapper__card-header"></div>
+            </div>
+            <div class="main__outlet_wrapper__card">
+              <div class="main__outlet_wrapper__card-header"></div>
+              <div class="main__outlet_wrapper__card-body">
+                <p>1-stol</p>
+              </div>
+              <div class="main__outlet_wrapper__card-header"></div>
+            </div>
+            <div class="main__outlet_wrapper__card">
+              <div class="main__outlet_wrapper__card-header"></div>
+              <div class="main__outlet_wrapper__card-body">
+                <p>1-stol</p>
+              </div>
+              <div class="main__outlet_wrapper__card-header"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="sidebar_right">
+        <div class="dropdown">
+          <div class="toggle-container">
+            <button class="toggle-btn active_dropdown">Buyurtma</button>
+            <button class="toggle-btn">Bron qilish</button>
+          </div>
+        </div>
+        <div class="sidebar_right_bottom">
+          <img src="./imgs/noprodcutsadded.png" alt="no product image" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
