--- a/orders.html
+++ b/orders.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yangi buyurtma</title>
+    <title>Buyurtmalar</title>
     <link rel="stylesheet" href="./main.css" />
     <script defer src="./main.js"></script>
   </head>
@@ -18,14 +18,14 @@
             </div>
             <ul class="navbar_links">
               <li class="navbar_links-item">
-                <a href="./newProduct.html" class="active">
-                  <img src="./icons/home.svg" alt="home img" />
+                <a href="./newProduct.html">
+                  <img src="./icons/home-gray.svg" alt="home img" />
                   Bosh sahifa
                 </a>
               </li>
               <li class="navbar_links-item">
-                <a href="./orders.html">
-                  <img src="./icons/nav-2.svg" alt="home img" />
+                <a href="./orders.html" class="active">
+                  <img src="./icons/note.svg" alt="home img" />
                   Buyurtmalar
                 </a>
               </li>
@@ -51,18 +51,30 @@
       </nav>
     </header>
     <main class="main">
-      <section class="sidebar_left">
+      <section class="sidebar_left" style="align-items: center">
+        <div class="sidebar_left-item">
+          <img src="./icons/offers.svg" alt="coffee" />
+          <span>Coffee</span>
+        </div>
+        <div class="sidebar_left-item">
+          <img src="./icons/beverages.svg" alt="beverages" />
+          <span>Beverages</span>
+        </div>
         <div class="sidebar_left-item sidebar-active">
-          <img src="./icons/breakfastwhite.svg" alt="breakfast" />
-          <span>1 - Etaj</span>
+          <img src="./icons/Icon.svg" alt="Food" />
+          <span>Food</span>
         </div>
         <div class="sidebar_left-item">
-          <img src="./icons/breakfast.svg" alt="breakfast" />
-          <span>2-Etaj</span>
+          <img src="./icons/pasta.svg" alt="appetizer" />
+          <span>Appetizer</span>
         </div>
         <div class="sidebar_left-item">
-          <img src="./icons/breakfast.svg" alt="breakfast" />
-          <span>Podval</span>
+          <img src="./icons/lasagna.svg" alt="bread" />
+          <span>Bread</span>
+        </div>
+        <div class="sidebar_left-item">
+          <img src="./icons/misc.svg" alt="snack" />
+          <span>Snack</span>
         </div>
       </section>
 
@@ -70,64 +82,49 @@
         <div class="main_outlet_top">
           <p class="main_outlet_top-text">
             <span class="span">Bosh sahifa /</span>
-            <span>Buyurtmalar</span>
+            <span>Buyurtma#174</span>
           </p>
         </div>
+
         <div class="main_outlet_center">
           <div class="main_outlet-search">
             <img src="./icons/search.svg" alt="search" />
             <input type="text" placeholder="Search" />
           </div>
           <div class="main_outlet-btn">
-            <a href="#" class="main_outlet_btn-active">Barchasi</a>
-            <a href="#">Bron qilingalnlar</a>
-            <a href="#">VIP Zallar</a>
-            <a href="#">Honalar</a>
+            <a href="#" class="main_outlet_btn-active">All</a>
+            <a href="#">Chicken</a>
+            <a href="#">Seafood</a>
+            <a href="#">Pasta</a>
+            <a href="#">Rice bowl</a>
           </div>
         </div>
-        <div class="main_outlet_bottom">
-          <div class="main__outlet_wrapper">
-            <div class="main__outlet_wrapper__card">
-              <div class="main__outlet_wrapper__card-header"></div>
-              <div class="main__outlet_wrapper__card-body">
-                <p>1-stol</p>
-              </div>
-              <div class="main__outlet_wrapper__card-header"></div>
-            </div>
-            <div class="main__outlet_wrapper__card">
-              <div class="main__outlet_wrapper__card-header"></div>
-              <div class="main__outlet_wrapper__card-body">
-                <p>1-stol</p>
-              </div>
-              <div class="main__outlet_wrapper__card-header"></div>
-            </div>
-            <div class="main__outlet_wrapper__card">
-              <div class="main__outlet_wrapper__card-header"></div>
-              <div class="main__outlet_wrapper__card-body">
-                <p>1-stol</p>
-              </div>
-              <div class="main__outlet_wrapper__card-header"></div>
-            </div>
-            <div class="main__outlet_wrapper__card">
-              <div class="main__outlet_wrapper__card-header"></div>
-              <div class="main__outlet_wrapper__card-body">
-                <p>1-stol</p>
-              </div>
-              <div class="main__outlet_wrapper__card-header"></div>
+
+        <div class="main_outlet_bottom order_main">
+          <div class="main__outlet_wrapper order">
+          
+            <div class="order_card">
+              <img class="order_card_img" src="./imgs/Image.png" alt="order img" />
+              <h4 class="order_card_title">Ikan santan</h4>
+              <p class="order_card_price">$25.12</p>
             </div>
           </div>
         </div>
       </section>
+
       <section class="sidebar_right">
+
         <div class="dropdown">
           <div class="toggle-container">
-            <button class="toggle-btn active_dropdown">Buyurtma</button>
-            <button class="toggle-btn">Bron qilish</button>
+            <button class="toggle-btn active_dropdown">Qo'shish</button>
+            <button class="toggle-btn">Yakunlash</button>
           </div>
         </div>
+
         <div class="sidebar_right_bottom">
-          <img src="./imgs/noprodcutsadded.png" alt="no product image" />
+          
         </div>
+
       </section>
     </main>
   </body>
