booking page qoshildi

--- a/orders.html
+++ b/orders.html
@@ -158,8 +158,8 @@
           </li>
         </ul>
         <div class="order_modal-footer">
-          <a href="#" onclick="closeModal()" class="order_print_out" id="order_print_out">Chop etish</a>
-          <a href="#" onclick="closeModal()" class="order_close" id="close_modal">Yopish</a>
+          <a href="./order2.html" onclick="closeModal()" class="order_print_out" id="order_print_out">Chop etish</a>
+          <a href="./order2.html" onclick="closeModal()" class="order_close" id="close_modal">Yopish</a>
         </div>
       </div>
     </div>
