--- a/newProduct.html
+++ b/newProduct.html
@@ -80,7 +80,7 @@
           </div>
           <div class="main_outlet-btn">
             <a href="#" class="main_outlet_btn-active">Barchasi</a>
-            <a href="#">Bron qilingalnlar</a>
+            <a href="./booking.html">Bron qilingalnlar</a>
             <a href="#">VIP Zallar</a>
             <a href="#">Honalar</a>
           </div>
@@ -121,8 +121,8 @@
       <section class="sidebar_right">
         <div class="dropdown">
           <div class="toggle-container">
-            <button class="toggle-btn active_dropdown">Buyurtma</button>
-            <button class="toggle-btn">Bron qilish</button>
+            <a href="./newProduct.html" class="toggle-btn active_dropdown">Buyurtma</a>
+            <a href="./booking.html" class="toggle-btn">Bron qilish</a>
           </div>
         </div>
         <div class="sidebar_right_bottom">
