--- a/order2.html
+++ b/order2.html
@@ -121,8 +121,8 @@
       <section class="sidebar_right">
         <div class="dropdown">
           <div class="toggle-container">
-            <a href="./order2.html" class="toggle-btn active_dropdown" style="text-decoration: none; color: gray;">Buyurtma</a>
-            <a href="./booking.html" class="toggle-btn" style="text-decoration: none; color: gray;">Bron qilish</a>
+            <a href="./order2.html" class="toggle-btn active_dropdown">Buyurtma</a>
+            <a href="./booking.html" class="toggle-btn">Bron qilish</a>
           </div>
         </div>
         <div class="sidebar_right_bottom">
