--- a/booking.html
+++ b/booking.html
@@ -97,7 +97,7 @@
             <div class="main__outlet_wrapper__card">
               <div class="main__outlet_wrapper__card-header"></div>
               <div class="main__outlet_wrapper__card-body">
-                <p>1-stol</p>
+                <p>2-stol</p>
               </div>
               <div class="main__outlet_wrapper__card-header"></div>
             </div>
@@ -107,8 +107,8 @@
       <section class="sidebar_right">
         <div class="dropdown">
           <div class="toggle-container">
-            <a href="./order2.html" class="toggle-btn" style="text-decoration: none; color: gray">Buyurtma</a>
-            <a href="./booking.html" class="toggle-btn active_dropdown" style="text-decoration: none; color: gray">Bron qilish</a>
+            <a href="./order2.html" class="toggle-btn" >Buyurtma</a>
+            <a href="./booking.html" class="toggle-btn active_dropdown" >Bron qilish</a>
           </div>
         </div>
         <div class="sidebar_right_bottom">
